--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     --headingFont: 'PT Sans', sans-serif;
     --paragraphFont: 'Open Sans', sans-serif;
     --primary: #784D3C;
+    --gray: #E1E1E1;
     --white: #FFFFFF;
     --dark: #000000;
 }
@@ -19,8 +20,7 @@ body{
     line-height: 2;
 }
 .container{
-    max-width: 120rem;
-    width: 90%;
+    width: min(90%, 120rem);
     margin: 0 auto;
 }
 a{
@@ -28,6 +28,7 @@ a{
 }
 h1,h2,h3,h4{
     font-family: var(--headingFont);
+    line-height: 1.2;
 }
 h1{
     font-size: 4.8rem;
@@ -67,6 +68,9 @@ img{
     color:var(--white);
     margin-top: 5rem;
 }
+.bar{
+    padding-top: 4rem;
+}
 @media (min-width: 768px) {
    .header__text{
        margin-top: 15rem;
@@ -104,4 +108,61 @@ img{
        grid-template-columns: 2fr 1fr;
        column-gap: 4rem;
    }
+}
+.entry{
+    border-bottom: 1px solid var(--gray);
+    margin-bottom: 2rem;
+}
+.entry:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+.button{
+    display: block;
+    font-family: var(--headingFont);
+    color: var(--white);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+   .button{
+       display: inline-block;
+   }
+}
+.button--primary{
+    background-color: var(--dark);
+}
+.button--secondary{
+    background-color: var(--primary);
+}
+.courses{
+    list-style: none;
+}
+.widget-course{
+    border-bottom: 1px solid var(--gray);
+    margin-bottom: 2rem;
+}
+.widget-course:last-of-type{
+    border: none;
+    margin-bottom: 0;
+}
+.widget-course__label{
+    font-family: var(--headingFont);
+    font-weight: bold;
+}
+.widget-course__info{
+    font-weight: normal; /* normal = 400 */
+}
+.widget-course__label,
+.widget-course__info{
+    font-size: 2rem;
+}
+.footer{
+    background-color: var(--dark);
+    padding-bottom: 3rem;
+    margin-top: 4rem;
 }
