--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,10 @@ img{
     text-transform: uppercase;
     font-weight: bold;
     margin-bottom: 2rem;
+    border: none;
+}
+.button:hover{
+    cursor: pointer;
 }
 @media (min-width: 768px) {
    .button{
@@ -198,4 +202,33 @@ img{
 }
 .course:last-of-type{
     border: none;
+}
+/* Contact */
+.contact-bg{
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.form{
+    background-color: var(--white);
+    margin: -8rem auto 0 auto;
+    width: 95%;
+    padding: 5rem;
+}
+.camp{
+     display: flex;
+     margin-bottom: 2rem;
+}
+.camp__label{
+    flex: 0 0 9rem;
+    text-align: right;
+    padding-right: 2rem;
+}
+.camp__field{
+    flex: 1;
+    border: 1px solid var(--gray);
+}
+.camp__field--textarea{
+    height: 16rem;
 }
