--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,12 @@ img{
     text-align: center;
 }
 /* Header */
+.webp .header{
+    background-image: url(../img/banner.webp);
+}
+.no-webp .header{
+    background-image: url(../img/banner.jpg)
+}
 .header{
     background-image: url(../img/banner.jpg);
     height: 60rem;
