--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,20 @@ img{
     border: none;
 }
 /* Contact */
+.error{
+    background-color: rgb(185,0,0);
+    text-align: center;
+    padding: 1rem;
+    color:var(--white);
+    text-transform: uppercase;
+}
+.success{
+    background-color: rgb(75, 184, 0);
+    text-align: center;
+    padding: 1rem;
+    color:var(--white);
+    text-transform: uppercase;
+}
 .contact-bg{
     background-image: url(../img/contacto.jpg);
     height: 40rem;
